--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     },
     "extra": {
         "branch-alias": {
+            "master": "0.1-dev-master",
             "dev-master": "0.1-dev"
         }
     }
