--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php" : ">=5.5.9",
-        "guzzlehttp/guzzle": ">=6.0"
+        "guzzlehttp/guzzle": ">=6.0",
+        "league/oauth2-client": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
